--- a/ImmichFrame/Settings.example.json
+++ b/ImmichFrame/Settings.example.json
@@ -11,6 +11,7 @@
   "Albums": [ "" ],
   "ExcludedAlbums": [ "" ],
   "People": [ "" ],
+  "ShowOtherPhotosInAlbumWithPeople": false,
   "ImmichFrameAlbumName": "",
   "ShowClock": true,
   "ClockFontSize": 36,
